changed styling so that 2nd headings scale with viewport size caught an issue where h2 tags were causing scrollx overflow, so I manually changed the size. Just have to make sure not to use words that are too long in the titles.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -321,5 +321,18 @@ hr {
 
   h2 {
     font-size: 1.5em;
+    word-break: break-all;
+  }
+
+  p {
+    font-size: 0.8em;
+  }
+
+  li {
+    font-size: 0.8em;
+  }
+
+  details {
+    font-size: 0.8em;
   }
 }
